# lightup

./: .clang-format  .gitignore  CMakeLists.txt  README.md  default.txt  game.c  game.h  game_aux.c  game_ext.h  game_sdl.c  game_sld.c  game_solve.c  game_test.c  game_test_abdouldiallo.c  game_test_arledoux.c  game_test_lorichard.c  game_test_maaudrain.c  game_test_rmachecourtb.c  game_text.c  game_tools.c  game_tools.h  jeu.txt  model.c  model.h  queue.c
.github/workflows/: main.yml
android/: AndroidManifest.xml  build.xml
android/jni/src/: Android.mk  game_sdl.c  game_test_abdouldiallo.c  game_test_arledoux.c  game_test_lorichard.c  game_test_maaudrain.c  game_test_rmachecourtb.c  model.c  model.h
game_web/: demo.js  wrapper.c
game_web/src/: game_aux.h  game_ext.h  game_sdl.c  game_solve.c  game_text.c  game_tools.h
games/: 10x10.txt  2x3.txt  5x5.txt  impossible.txt  wrapping7.txt
web/: Makefile  demo.js  game.html  mystyle.css
